--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,9 @@ dependencies {
 //	Thymeleaf
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 
+//	Validation
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
 //	便利機能追加
 	implementation 'org.apache.commons:commons-lang3:3.15.0'
 // Lombok
