--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,9 @@ dependencies {
 //	Validation
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+//	OpenAPI Generator
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
+
 //	便利機能追加
 	implementation 'org.apache.commons:commons-lang3:3.15.0'
 // Lombok
