--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@ plugins {
 	id 'war'
 	id 'org.springframework.boot' version '3.3.3'
 	id 'io.spring.dependency-management' version '1.1.6'
+	// node.js
+	id 'com.github.node-gradle.node' version '5.0.0'
 }
 
 group = 'football'
@@ -50,3 +52,23 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+// Node.js
+node {
+	version = '20.11.1'
+	npmVersion = '10.2.4'
+	download = true
+}
+
+task buildReact(type: Exec) {
+	workingDir "$projectDir/react-app"
+	commandLine 'C:/Program Files/nodejs/npm.cmd', 'run', 'build'
+}
+
+task copyToStatic(type: Copy) {
+	from "$projectDir/react-app/build"
+	into "$projectDir/src/main/resources/static"
+}
+
+build.dependsOn buildReact, copyToStatic
+processResources.dependsOn copyToStatic
