Repositoryテスト完了

--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,8 @@ dependencies {
 
 //	テスト
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
+	testImplementation 'com.h2database:h2:2.3.232'
 
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
