FileWriterでのエラーログ試み:ローカルテストでログ実行を確認済み

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,5 +45,5 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: custom-logs
-        path: build/custom-logs/
+        path: build/reports/tests/custom-logs/
     
