testの--info削除、StandingTest一旦無効か

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,7 +31,7 @@ jobs:
       uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
 
     - name: Run tests
-      run: ./gradlew test --info
+      run: ./gradlew test
 
     - name: Upload Test Report
       if: failure()  # テストが失敗した場合のみ実行
