--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,22 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
+tasks.named('test') {
+	useJUnitPlatform()
+	// mockStaticのために以下を追加
+	jvmArgs '--add-opens=java.base/java.util=ALL-UNNAMED',
+			'--add-opens=java.base/java.lang=ALL-UNNAMED',
+			'--add-opens=java.base/java.lang.invoke=ALL-UNNAMED',
+			'--add-opens=java.prefs/java.util.prefs=ALL-UNNAMED',
+			'--add-opens=java.base/java.nio.charset=ALL-UNNAMED',
+			'--add-opens=java.base/java.net=ALL-UNNAMED',
+			'--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED',
+			'-XX:+EnableDynamicAgentLoading'
+	testLogging {
+		showStandardStreams = true // System.outの出力を表示
+	}
+}
+
 
 //// Node.js
 //node {
